@@ -1,0 +1,5 @@
+def private_function(name):
+    """private_function is a docstring().
+
+    :meta private:
+    """
